--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login_Activity"
+    tools:context=".Main.login_Activity"
     android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:background="@color/colorGrey">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Login"
+        android:textSize="35dp"
+        android:textColor="@color/colorWhite"/>
 
     <EditText
         android:id="@+id/editText_email"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="150dp"
         android:background="#ffffff"
         android:hint="Email"/>
 
@@ -50,7 +58,8 @@
             android:layout_height="35dp"
             android:paddingLeft="20dp"
             android:textStyle="bold"
-            android:text="@string/Register"/>
+            android:text="@string/Register"
+            android:textColor="@color/colorYellow"/>
 
 
     </LinearLayout>
